SAK-14457 removed use of sun base64 library and now use commons codec
git-svn-id: https://source.sakaiproject.org/svn/help/trunk@52441 66ffb92e-73f9-0310-93c1-f5514f145a0a